--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,13 @@
   "version": "1.0",
   "description": "Send the current tab URL to SMPlayer",
   "icons": {
-    "48": "assets/logo.svg"
+    "16": "assets/logo.svg",
+    "32": "assets/logo.svg",
+    "48": "assets/logo.svg",
+    "64": "assets/logo.svg",
+    "128": "assets/logo.svg",
+    "256": "assets/logo.svg",
+    "512": "assets/logo.svg"
   },
   "permissions": [
     "activeTab",
@@ -30,4 +36,3 @@
 		"browser_style": true
 	}
 }
-
