--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Send URL to SMPlayer",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Send the current tab URL to SMPlayer",
   "icons": {
     "16": "assets/logo.svg",
@@ -19,7 +19,9 @@
     "notifications"
   ],
   "background": {
-    "scripts": ["scripts/background.js"],
+    "scripts": [
+      "scripts/background.js"
+    ],
     "persistent": false
   },
   "browser_action": {
@@ -32,7 +34,8 @@
     }
   },
   "options_ui": {
-		"page": "options.html",
-		"browser_style": true
-	}
+    "page": "html/options.html",
+    "browser_style": true
+  }
 }
+
